@@ -8,7 +8,7 @@ class TestPanel(wx.Panel):
         self.log = log
         wx.Panel.__init__(self, parent, -1)
 
-        sizer = wx.FlexGridSizer(0, 3, 5, 5)
+        sizer = wx.FlexGridSizer(0, 3, 4, 4)
         box = wx.BoxSizer(wx.VERTICAL)
         fs = self.GetFont().GetPointSize()
         bf = wx.Font(fs+4, wx.SWISS, wx.NORMAL, wx.BOLD)
@@ -32,6 +32,17 @@ class TestPanel(wx.Panel):
 
         # Loop through all of the getters in wx.StandardPaths and make
         # a set of items in the sizer for each.
+        def makeitem(name, *args):
+            func = getattr(sp, name)
+            sizer.Add(wx.StaticText(self, -1, "%s%s:" %(name, repr(args))),
+                      0, wx.ALIGN_RIGHT|wx.ALIGN_CENTER_VERTICAL)
+            sizer.Add(wx.TextCtrl(self, -1, func(*args),
+                                  size=(275,-1), style=wx.TE_READONLY))
+
+            btn = wx.Button(self, wx.ID_HELP)
+            sizer.Add(btn)
+            self.help[btn] = func.__doc__
+            
         for x in ['GetConfigDir',
                   'GetUserConfigDir',
                   'GetDataDir',
@@ -40,19 +51,16 @@ class TestPanel(wx.Panel):
                   'GetUserLocalDataDir',
                   'GetPluginsDir',
                   'GetInstallPrefix',
+                  'GetResourcesDir',
                   ]:
-            func = getattr(sp, x)
-            sizer.Add(wx.StaticText(self, -1, x+'():'), 0,
-                      wx.ALIGN_RIGHT|wx.ALIGN_CENTER_VERTICAL)
-            sizer.Add(wx.TextCtrl(self, -1, func(), size=(275,-1), style=wx.TE_READONLY))
+            makeitem(x)
 
-            btn = wx.Button(self, wx.ID_HELP)
-            sizer.Add(btn)
-            self.help[btn] = func.__doc__
+        # this one needs parameters
+        makeitem('GetLocalizedResourcesDir', 'en',
+                 wx.StandardPaths.ResourceCat_Messages )
 
         self.Bind(wx.EVT_BUTTON, self.OnShowDoc, id=wx.ID_HELP)
-
-        box.Add(sizer, 0, wx.CENTER|wx.ALL, 25)
+        box.Add(sizer, 0, wx.CENTER|wx.ALL, 20)
         self.SetSizer(box)
 
 
