@@ -24,14 +24,13 @@
 %newgroup
 
 DocStr(wxStandardPaths,
-"wx.StandardPaths returns the standard locations in the file system and
-should be used by the programs to find their data files in a portable
-way.
+"wx.StandardPaths returns standard locations in the file system and
+should be used by programs to find their data files in a portable way.
 
 In the description of the methods below, the example return values are
 given for the Unix, Windows and Mac OS X systems, however please note
-that these are just the examples and the actual values may differ. For
-example, under Windows: the system administrator may change the
+that these are just  examples and the actual values may differ. For
+example, under Windows the system administrator may change the
 standard directories locations, i.e. the Windows directory may be
 named W:\Win2003 instead of the default C:\Windows.
 
@@ -42,7 +41,7 @@ is /usr/local by default but may be changed using `SetInstallPrefix`.
 
 The directories returned by the methods of this class may or may not
 exist. If they don't exist, it's up to the caller to create them,
-wxStandardPaths doesn't do it.
+wx.StandardPaths doesn't do it.
 
 Finally note that these functions only work with standardly packaged
 applications. I.e. under Unix you should follow the standard
@@ -53,6 +52,18 @@ class doesn't help you to do it.", "");
 class wxStandardPaths
 {
 public:
+    // possible resources categorires
+    enum ResourceCat
+    {
+        // no special category
+        ResourceCat_None,
+
+        // message catalog resources
+        ResourceCat_Messages,
+
+        // end of enum marker
+        ResourceCat_Max
+    };
 
     DocStr(
         Get,
@@ -121,6 +132,33 @@ prefix/lib/appname under Unix, program directory under Windows and
 Contents/Plugins app bundle subdirectory under Mac", "");
 
 
+    // get resources directory: resources are auxiliary files used by the
+    // application and include things like image and sound files
+    //
+    // same as GetDataDir() for all platforms except Mac where it returns
+    // Contents/Resources subdirectory of the app bundle
+    DocDeclStr(
+        virtual wxString , GetResourcesDir() const,
+        "Get resources directory.  Resources are auxiliary files used by the
+application and include things like image and sound files.
+
+Same as `GetDataDir` for all platforms except Mac where it returns
+Contents/Resources subdirectory of the app bundle.", "");
+    
+
+    DocDeclStr(
+        virtual wxString ,
+        GetLocalizedResourcesDir(const wxString& lang,
+                                 ResourceCat category = ResourceCat_None) const,
+        "Get localized resources directory containing the resource files of the
+specified category for the given language.
+
+In general this is just GetResourcesDir()/lang under Windows and Unix
+and GetResourcesDir()/lang.lproj under Mac but is something quite
+different under Unix for the message catalog category (namely the
+standard prefix/share/locale/lang/LC_MESSAGES.)", "");
+    
+       
     
     DocStr(SetInstallPrefix,
            "Set the program installation directory which is /usr/local by default.
